outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval7364118830274608127_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as nodes decrease), hub centrality (low priority or ignored when few nodes remain), and penalizes excessively distant nodes (scaled by remaining nodes) using a sophisticated weighted scoring system that combines the strengths of the three existing algorithms.}
                                ^
SyntaxError: unmatched ')'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as nodes decrease), hub centrality (low priority or ignored when few nodes remain), and penalizes excessively distant nodes (scaled by remaining nodes) using a sophisticated weighted scoring system that combines the strengths of the three existing algorithms.}
                                ^
SyntaxError: unmatched ')'
